--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cec-controller": "^1.4.0"
+    "body-parser": "^1.19.0",
+    "cec-controller": "^1.4.0",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "socket.io": "^4.0.1"
   }
 }
