--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cec-controller": "^1.4.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "onoff": "^6.0.3",
     "socket.io": "^4.0.1"
   }
 }
